Made the issue history component more responsive. Changed the issue history description block to markdown. Fixed the history blocks overlapping the history sub-title in the issue history component on desktop devices

--- a/client/src/styles/_issue.scss
+++ b/client/src/styles/_issue.scss
@@ -367,7 +367,7 @@
 
   &__history-header {
     width: 100%;
-    height: 80px;
+    height: 120px;
     padding: 20px 20px 0px 20px;
     display: flex;
     flex-direction: column;
@@ -388,8 +388,8 @@
 
   &__history-wrapper {
     width: 100%;
-    height: calc(100% - 80px);
-    max-height: calc(100% - 80px);
+    height: calc(100% - 120px);
+    max-height: calc(100% - 120px);
     padding: 0px 20px 20px 20px;
     display: flex;
     flex-direction: column;
@@ -542,16 +542,6 @@
       }
     }
   }
-
-  .issue-history {
-    &__history-header {
-      height: 100px;
-    }
-
-    &__history-wrapper {
-      height: calc(100% - 100px);
-    }
-  }
 }
 
 @media screen and (max-width: 576px) {
@@ -579,12 +569,8 @@
   }
 
   .issue-history {
-    &__history-header {
-      height: 120px;
-    }
-
-    &__history-wrapper {
-      height: calc(100% - 120px);
+    &__issue-name {
+      font-size: 20px;
     }
   }
 }
@@ -625,7 +611,15 @@
 
   .issue-history {
     &__issue-name {
-      font-size: 20px;
+      font-size: 18px;
+    }
+
+    &__history-header {
+      height: 140px;
+    }
+
+    &__history-wrapper {
+      height: calc(100% - 140px);
     }
   }
 }
