--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -4103,7 +4103,7 @@ header::after {
 
 .issue-history__history-header {
   width: 100%;
-  height: 80px;
+  height: 120px;
   padding: 20px 20px 0px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4133,8 +4133,8 @@ header::after {
 
 .issue-history__history-wrapper {
   width: 100%;
-  height: calc(100% - 80px);
-  max-height: calc(100% - 80px);
+  height: calc(100% - 120px);
+  max-height: calc(100% - 120px);
   padding: 0px 20px 20px 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4318,12 +4318,6 @@ header::after {
   .issue__comment p {
     font-size: 14px;
   }
-  .issue-history__history-header {
-    height: 100px;
-  }
-  .issue-history__history-wrapper {
-    height: calc(100% - 100px);
-  }
 }
 
 @media screen and (max-width: 576px) {
@@ -4340,11 +4334,8 @@ header::after {
   .issue__comment p {
     font-size: 12px;
   }
-  .issue-history__history-header {
-    height: 120px;
-  }
-  .issue-history__history-wrapper {
-    height: calc(100% - 120px);
+  .issue-history__issue-name {
+    font-size: 20px;
   }
 }
 
@@ -4382,7 +4373,13 @@ header::after {
     font-size: 20px;
   }
   .issue-history__issue-name {
-    font-size: 20px;
+    font-size: 18px;
+  }
+  .issue-history__history-header {
+    height: 140px;
+  }
+  .issue-history__history-wrapper {
+    height: calc(100% - 140px);
   }
 }
 
